Added fallback for SHA key

--- a/cloudBuild.yaml
+++ b/cloudBuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # Build and push the backend image
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/backend:$SHORT_SHA", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/backend:${SHORT_SHA:-latest}", "."]
     dir: "backend/"
 
   - name: "gcr.io/cloud-builders/docker"
@@ -9,11 +9,11 @@ steps:
 
   # Build and push the frontend image
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/frontend:$SHORT_SHA", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/frontend:${SHORT_SHA:-latest}", "."]
     dir: "frontend/"
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/frontend:$SHORT_SHA"]
+    args: ["push", "gcr.io/$PROJECT_ID/frontend:${SHORT_SHA:-latest}", "."]
 
   # Apply Kubernetes configurations
   - name: "gcr.io/cloud-builders/kubectl"
