--- a/cloudBuild.yaml
+++ b/cloudBuild.yaml
@@ -5,7 +5,7 @@ steps:
     dir: "backend/"
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/backend:$SHORT_SHA"]
+    args: ["push", "gcr.io/$PROJECT_ID/backend:${SHORT_SHA:-latest}", "."]
 
   # Build and push the frontend image
   - name: "gcr.io/cloud-builders/docker"
