Updated backend docker file to be compatiable with Kaniko

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,28 +4,20 @@ FROM node:latest
 # Create app directory
 WORKDIR /usr/src/app
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into this layer.
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm \
-    npm ci --include=dev
-
+# Copy package.json and package-lock.json
 COPY package.json package-lock.json ./
 
-# install nodemon for hot-reloading
+# Install dependencies using npm ci
+RUN npm ci --include=dev
+
+# Install nodemon globally
 RUN npm install -g nodemon
 
-# Install all dependencies (including production dependencies)
-RUN npm install
-
-# Copy the rest of the source files into the image.
+# Copy the rest of the application code
 COPY . .
 
-
-# Run the application as a non-root user.
-RUN  chown -R node /usr/src/app
+# Change ownership to non-root user and switch user
+RUN chown -R node:node /usr/src/app
 USER node
 
 EXPOSE 8080
