Updated yaml files to use latest image

--- a/k8-backend.yaml
+++ b/k8-backend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: gcr.io/quizspark/my-app-backend:v3
+          image: gcr.io/quizspark/my-app-backend:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
