--- a/k8-frontend.yaml
+++ b/k8-frontend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: gcr.io/quizspark/my-app-frontend:v2
+          image: gcr.io/quizspark/my-app-frontend:latest
           imagePullPolicy: Always
           env:
             - name: REACT_APP_API_URL
